--- a/myapp/templates/base.html
+++ b/myapp/templates/base.html
@@ -16,7 +16,7 @@
             <div class="flex items-center space-x-4">
                 {% if user.is_authenticated %}
                     <span class="text-gray-600">Hi, {{ user.username }}</span>
-                    <a class="px-4 py-2 text-sm font-medium rounded-lg border border-teal-500 text-teal-500 transition duration-300 hover:bg-teal-500 hover:text-white" href="{% url 'logout' %}">
+                    <a class="px-4 py-2 text-sm font-medium rounded-lg border border-teal-500 text-teal-500 transition duration-300 hover:bg-teal-500 hover:text-white" href="{% url 'log_out' %}">
                         Logout
                     </a>
                 {% else %}
